[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Exports/HUDBorder.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/PIXELFONT225.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=3]
[ext_resource path="res://Assets/Exports/ScreenTransition.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 6
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
Label/fonts/font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionTexture:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -400, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "ScreenTransition"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionTexture:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -400, 0 ), Vector2( 256, 0 ) ]
}

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 3 )

[node name="TransitionTexture" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -528.0
margin_top = -120.0
margin_right = -128.0
margin_bottom = 120.0
texture = ExtResource( 4 )

[node name="HudBorder" type="Sprite" parent="."]
position = Vector2( 128, 120 )
texture = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 56.0
margin_bottom = 16.0
alignment = 1

[node name="BlueScore" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 9.0
margin_top = 5.0
margin_right = 21.0
margin_bottom = 11.0
custom_colors/font_color = Color( 0.258824, 0.576471, 0.792157, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "00"

[node name="Dash" type="Label" parent="HBoxContainer"]
margin_left = 25.0
margin_top = 5.0
margin_right = 30.0
margin_bottom = 11.0
custom_colors/font_color = Color( 0.65098, 0.768627, 0.74902, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "-"

[node name="RedScore" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 34.0
margin_top = 5.0
margin_right = 46.0
margin_bottom = 11.0
custom_colors/font_color = Color( 0.784314, 0.215686, 0.215686, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "00"

[node name="Time" type="Label" parent="."]
unique_name_in_owner = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -11.0
margin_right = -22.0
margin_bottom = -5.0
custom_colors/font_color = Color( 0.65098, 0.768627, 0.74902, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "00:00:000"
align = 1

[node name="CounterRect" type="ColorRect" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -11.0
margin_right = 128.0
margin_bottom = 11.0
color = Color( 0.65098, 0.768627, 0.74902, 1 )

[node name="CounterTime" type="Label" parent="CounterRect"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -6.0
margin_top = -6.0
margin_right = 6.0
margin_bottom = 6.0
custom_colors/font_color = Color( 0.407843, 0.498039, 0.533333, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
anims/RESET = SubResource( 4 )
anims/ScreenTransition = SubResource( 5 )
